<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="imgSearch">Search</string>
    <string name="hintImageSearch">Enter Image Search</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">Advanced search options</string>
    <string name="text_image_size">Image Size</string>
    <string name="text_color_filter">Color Filter</string>
    <string name="text_image_type">Image Type</string>
    <string name="btn_settings_save">Save</string>
    <string name="title_activity_full_screen">FullScreenActivity</string>
    <string name="lbl_site">Site</string>

</resources>
